app/static/sass/ringing_room.scss
/* Global style */

html,
body {
  height: 100%;
}

body {
  overflow: hidden;
  font-size: x-large;
  font-family: serif;
  background-color: #F0EAD6;
}



/* Putting the ropes in a circle */

/* Mixins to arrange things in a circle easily
/* We need multiple precomputed mixins for different tower sizes */
@mixin on-circle($item-count, $circle-size, $img-size) {
  width:  $circle-size;
  height: $circle-size;
  padding: 0;
  border-radius: 50%;
  list-style: none;

  > * {
    position: absolute;
    top:  50%; 
    left: 50%;
    // width:  0;
    // height: 0;
	// border: 0;
  
    $angle: (360 / $item-count);
	$rot: 0; // initialize for scope

    @if $item-count == 4 { $rot: 1*$angle/2; }
	@if $item-count == 6 { $rot: 1*$angle; }
	@if $item-count == 8 { $rot: 3*$angle/2; }
	@if $item-count == 10 { $rot: 2*$angle; }
	@if $item-count == 12 { $rot: 5*$angle/2; }


	@for $i from 1 through $item-count {
      &:nth-of-type(#{$i}) {
        transform: 
          rotate($rot * 1deg) 
          translate($circle-size / 2) 
          rotate($rot * -1deg);

		  > * {
			  transform: translate(-$img-size/2,-$img-size/2);
		  }
      }

      $rot: $rot + $angle;
    }
    }
}

@mixin on-circle-four($circle-size, $img-size){
	@include on-circle(4, $circle-size, $img-size);
}

@mixin on-circle-six($circle-size, $img-size){
	@include on-circle(6, $circle-size, $img-size);
}

@mixin on-circle-eight($circle-size, $img-size){
	@include on-circle(8, $circle-size, $img-size);
}

@mixin on-circle-ten($circle-size, $img-size){
	@include on-circle(10, $circle-size, $img-size);
}

@mixin on-circle-twelve($circle-size, $img-size){
	@include on-circle(12, $circle-size, $img-size);
}


// Now, position the bell_circle
#bell_circle {
  $circ-size: 28em;
  $img-size: 5em;


  // margin: 5em auto 0;
  // border: solid 5px tomato;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  &.four   { @include on-circle-four($circ-size,$img-size); }
  &.six    { @include on-circle-six($circ-size,$img-size); }
  &.eight  { @include on-circle-eight($circ-size,$img-size); }
  &.ten    { @include on-circle-ten($circ-size,$img-size); }
  &.twelve { @include on-circle-twelve($circ-size,$img-size); }
}

/* Other positioning */

// Position rope images and their numbers
.rope {
	display: flex;
    flex-wrap: wrap;
	vertical-align: bottom;
    cursor: pointer;
	> img {
		display: block;
		vertical-align: bottom;
		width: 5em;
		height: 5em;
        &.assignment_mode{
            opacity: 0.4;
        }
	}
    > .rope_metadata {
            margin-left: -1em;
            display: inline-block;
            vertical-align: baseline;
            margin-bottom: -4px;
            width: 100px;

        > .number.cur_user {
            color: blue;
        }

        > .left_name {
            margin-left: auto;
            margin-right: 0;
            direction: rtl;
        }

        > .assigned_user {
            height: 1em;
            white-space: nowrap;
            vertical-align: baseline;
            .cur_user {
               color: blue;
           }
       }
   }

    > .left_metadata {
      float: right;
      vertical-align: bottom;
      margin-right: -1em;
      margin-left: -4em;
      text-align: right;
    }
}

.unassign {
   font-size: 15px; 

   &:hover{
       font-size: 17px;
       color: red;

   }
}



// make the treble number red
.number.treble, .number.treble.cur_user {
	color: #ff000d;
}


/* Call display */

h2#call_display {
	position: absolute;
	text-align: center;
	display: inline-block;
	height:4em;
	top: 50%;
	left: 50%;
	transform: translate(-40%, -50%);
}


/* Tower controls */

.tower_control{
  padding-top:5px;
  padding-left:15px;
}

.tower_name {
  padding-left: 0.5em;
  margin-bottom: 0;
  opacity: 0.75;
}

.tower_id {
  padding-left: 1.5em;
  // margin-bottom: -0.5em;
  font-size: small;
  // opacity: 0.75;
}

.tower_control_size {
  margin-top: 0.25em;
  padding-left: 0.5em;
  margin-bottom:0;
  li {
    cursor: pointer;
    padding-left: 0em;
    list-style-type: none;
    display: inline;
    margin: 0.5em;
    margin-left: 0.25em;
    font-size: x-large;
    opacity: 0.75;
  }

}

.audio_toggle{
  margin-left:1em;
  margin-top: 0.75em;
  font-size: smaller;
  opacity: 0.75;
  cursor: pointer;
  display: inline-block;
  border-style: solid;
  border-width: 1px;
  border-radius: 5px;
  padding: 0.25em;
}

/* help bar */
.help {
  cursor: pointer;
  // top: 5%;
  // left: 60%;
  opacity: 1;
  font-size: small;
  display: inline-block;
  border-style: solid;
  border-width: 1px;
  border-radius: 5px;
  padding: 0.25em;
}

.help_showing {
  width: 50em;
  font-size: large;
  padding: 0.5em;
  position: absolute;
  z-index: 9999;
  opacity: 1.0;
  border: 1px solid black;
  background-color: aliceblue;
}


/* User Display */

.user_display {

    padding: 15px;
}

.user_display_title {
  padding-left: 0.75em;
  opacity: 0.75;
  display: inline;
}

.toggle_assign {
  cursor: pointer;
  margin-left: 0.5em;
  margin-bottom: -0.5em;
  padding: 0.3em;
  border-style: solid;
  border-width: 1pt;
  border-color: black;
  border-radius: 5pt;
  font-size: small;
  opacity: 0.75;
  &.active{
      background: rgba(255,0,0,0.3);

  }
}

.user_list {
    
  display: table;
  border-width: 2px;
  border-left-style: solid;
  padding-left: 0px;
  margin-top: 0px;
  margin-left: 1em;
  margin-top: 0.5em;

  li {
    width: 100%;
    margin-left: 0.5em;
    padding: 0.25em;
    list-style-type: none;
    font-size: x-large;
    opacity: 0.75;
    display: table;
    border-radius: 5pt; 

    &.assignment_active{
        cursor: pointer;

        &.selected_user{
    background: rgba(0, 0, 255, 0.3);
        }
    }
  }

}

.user_list .cur_user {
    font-weight: bold;
}



.set_at_hand {
  cursor: pointer;
  opacity: 1;
  font-size: small;
  display: inline-block;
  border-style: solid;
  border-width: 1px;
  border-radius: 5px;
  padding: 0.25em;
}


/* Username Input Form */

form.pure-form { 
  position: absolute;
  width: 19em;
  top: 30%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.pure-input {
  width: 14em;

}

.pure-form {
  width: 40%;

}

fieldset {
  white-space: nowrap;
}

#join-message {
  width: 100%;
  font-size: smaller;

}

